--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -8,24 +8,20 @@ body{
      background-color: #3F51B5;
     font-family: Roboto,sans-serif;
 }
-
 .price-font{
     font-size: 13px;
     color: white;
     padding-left: 5px;
 }
-
 .top {
     color: #9c9c9c;
     font-size: 12px;
     font-weight: 500;
 }
-
 .bottom {
     font-size: 13px;
     margin: 0 0 5px;
 }
-
 .round-button{
     cursor: pointer;
     height:41px;
@@ -35,7 +31,6 @@ body{
     border-radius: 50%;
     background: rgba(0,0,0,.1);
 }
-
 .rounded-slid-act{
     cursor: pointer;
     border: 0;
@@ -46,7 +41,6 @@ body{
     margin: 0 5px;
     background-color: white;
 }
-
 .rounded-slid-deact{
     cursor: pointer;
     border: 0;
@@ -57,7 +51,6 @@ body{
     margin: 0 5px;
     background-color: rgba(0,0,0,.2);
 }
-
 .imgClass350{
     height:350px;
 }
@@ -69,36 +62,40 @@ body{
 }
 .imgClass200{
     height:200px;
-        // height: 949px;
-}
+       }
 .imgClass150{
     height:150px;
 }
-
-
 .google{
-         width: 26px;
+          width: 30px;
     height: 24px;
     margin-top: 1%;
+      margin-left:3%
 }
 .twitter{
-            width: 28px;
+                width: 27px;
     height: 25px;
     margin-top: 1%;
+    margin-left:3%
 }
 .facebook{
-      width: 37px;
-    height: 27px;
-
-    margin-top: 0%;
+         width: 27px;
+height: 22px;
+    margin-top: 1%;
+  margin-left:3%;
 }
 .message{
    width: 28px;
-    height: 25px
+    height: 25px;
+   margin-left: 2%;
+    margin-right: -2%; 
+        margin-top: 1%;
 }
 .phone{
    width: 28px;
-    height: 25px
+    height: 25px;
+   margin-left: -4%;
+    margin-right: -2%;
 }
 .logo{
         width: 64px;
@@ -111,12 +108,12 @@ body{
     font-size: 19px !important;
 }
 .toolbar2{
-   margin-top: 1%;
-    background: #3c4ca9;
+   margin-top: 3%;
+  background-color: #3F51B5;
     color: rgba(255,255,255,.87);
 }
 .btn{
-    font-size: 15px;
+        font-size: 19px;
 }
 .imgrowxs{
     height: 949px;
@@ -125,7 +122,23 @@ body{
         margin-top: 9%;
 }
 .textxs{
-         margin-top: 58%;
+         margin-top: 15% !important;
     margin-left: 60%;
     font-size: 14px;
+}
+.rent{
+         font-size: 13px!important;
+}
+.mat-form-field-underline {
+  display: none;
+    }
+.mat-form-field-infix {
+    // padding: 1.4375em 0;
+    border-top: .84375em solid transparent;
+    top: -3.5px;
+    font-size: 14px;
+    padding-left: 1%;
+}
+.mat-form-field-placeholder{
+    padding-left: 15px;
 }
