--- a/app/src/app/loginComponent/login.template.html
+++ b/app/src/app/loginComponent/login.template.html
@@ -2,7 +2,7 @@
   <div fxLayout="column" fxLayoutAlign="center center" fxShow="true" fxHide="false">
     <div fxLayout="row" fxLayoutAlign="center center" fxShow="true" fxHide="false">
       <div fxLayout="column" fxLayoutAlign="center center" fxShow="true" fxHide="false">
-        <mat-card>
+        <mat-card style="margin-top:71%;">
           <div fxLayout="column" fxShow="true" fxHide="false">
             <h2>LOGIN</h2>
             <mat-form-field>
