--- a/app/src/app/homeComponent/home.template.html
+++ b/app/src/app/homeComponent/home.template.html
@@ -42,7 +42,7 @@
         </mat-form-field>
       </div>
       <div fxLayout="row" fxShow="true" fxHide="false">
-        <bh-carousel [imageData]="imageData" style="width:100%" *ngIf="imageData"></bh-carousel>
+        <bh-carousel [imageData]="imageData" [limitImage]="limit" style="width:100%" *ngIf="imageData"></bh-carousel>
       </div>
       <footer>
         <div fxLayout="row" style="width:100%" class="footer" fxFlex="100" fxLayoutAlign="center center" fxShow="true" fxHide="false">
